// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceViewer utils toggleBlameClasses adds classes 1`] = `
<div
  class="content"
>
  <div
    class="!gl-pt-3 gl-border-gray-500 gl-border-t"
  >
    <div
      id="reference-0"
    >
      1
    </div>
    <div
      id="reference-1"
    >
      2
    </div>
    <div
      id="reference-2"
    >
      3
    </div>
  </div>
  <div>
    <div
      class="!gl-pt-3"
      id="reference-3"
    >
      Content 1
    </div>
    <div
      class="!gl-pt-3 gl-border-gray-500 gl-border-t"
      id="reference-4"
    >
      Content 2
    </div>
    <div
      class="!gl-pt-3 gl-border-gray-500 gl-border-t"
      id="reference-5"
    >
      Content 3
    </div>
  </div>
</div>
`;

exports[`SourceViewer utils toggleBlameClasses removes classes 1`] = `
<div
  class="content"
>
  <div>
    <div
      id="reference-0"
    >
      1
    </div>
    <div
      id="reference-1"
    >
      2
    </div>
    <div
      id="reference-2"
    >
      3
    </div>
  </div>
  <div>
    <div
      id="reference-3"
    >
      Content 1
    </div>
    <div
      id="reference-4"
    >
      Content 2
    </div>
    <div
      id="reference-5"
    >
      Content 3
    </div>
  </div>
</div>
`;
